[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
hyper = "0.14.23"
mime = "0.3.16"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = "1.23.0"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
